# nautonomous_configuration

./: CMakeLists.txt  README.md  package.xml
config/costmap/: common_costmap_params.yaml  example_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  test_config_costmap.yaml
config/imu/: razor.yaml
config/map/: amsterdam_cropped_.yaml  amsterdam_cropped_amsterdam_test.yaml  amsterdam_cropped_canals.yaml  amsterdam_cropped_coenhaven.yaml  amsterdam_cropped_coenhaven_dry_dock.yaml  amsterdam_cropped_handhaving.yaml  amsterdam_test.yaml  amsterdam_test_cropped_amsterdam_test.yaml  coenhaven.yaml
config/navigation/costmap/: common_costmap_params.yaml  costmap_2d.yaml  global_costmap_params.yaml  local_costmap_params.yaml
config/navigation/map/: amsterdam.yaml  amsterdam_cropped_coenhaven.yaml  amsterdam_cropped_coenhaven_dry_dock.yaml  amsterdam_cropped_debug_rotated.yaml  (+385 more)
config/planner/: base_local_planner_params.yaml
config/rviz/: nautonomous_costmap_test.rviz  nautonomous_default.rviz  rosbag_handhaving.rviz  rosbag_lidar.rviz
launch/: .nautonomous_configuration.launch.swp  costmap.launch  move_base.launch  nautonomous_configuration.launch  nautonomous_simulation_canals_configuration.launch
launch/imu/: razor-pub.launch
launch/map/: coenhaven.launch  map_papaverweg.launch  map_test.launch  map_test2.launch
launch/map_amsterdam/: amsterdam.launch
launch/mavros/: px4.launch
launch/planner/: move_base.launch
launch/pose/: ekf_with_gps.launch
launch/rosbridge/: test_rosbridge.launch
launch/rviz/: nautonomous_default.rviz
(+8 files in other folders)
