<?xml version="1.0"?>
<package>
  <name>nautonomous_configuration</name>
  <version>0.0.0</version>
  <description>The nautonomous_configuration package</description>

  <maintainer email="zeeuwe01@todo.todo">zeeuwe01</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
