<?xml version="1.0"?>
<package>
  <name>nautonomous_configuration</name>
  <version>0.0.1</version>
  <description>The nautonomous_configuration package</description>

  <maintainer email="daan.zeeuwe01@waternet.nl">Daan Zeeuwe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  
</package>
